# nexus_keyboard_overlay

./: .cland-tidy  .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  flake.nix  package.nix  release.sh  shell.nix  todo.md  todo.norg
.forgejo/workflows/: build.yaml
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
cmake/: linux.cmake
include/: Key.hpp  Settings.h  Shared.h  UiKey.hpp  globals.hpp  gui.hpp  settings.hpp  textures.hpp  utils.h  utils.hpp
include/nexus/: Nexus.h
src/: Key.cpp  Settings.cpp  Settings.h  Shared.cpp  Shared.h  entry.cpp  globals.cpp  gui.cpp  main.cpp  overlay.rc  resource.h  settings.cpp  textures.cpp  utils.cpp
src/imgui/: CMakeLists.txt
src/nexus/: Nexus.h
